Changing the base
Changing the base to Learning Art History

--- a/index.html
+++ b/index.html
@@ -1,53 +1,30 @@
-<!DOCTYPE HTML> <!-- esto le dice al navegador que vamos a usar html5 -->
+<!DOCTYPE HTML>
 <html lang="es">
 <head>
 	<meta charset="UTF-8" />
-	<meta description="160 caractéres de lo que tiene la página" />
-	<title>Grillas Emblemáticas</title>
+	<meta description="Learning Art History with Context" />
+	<title>Learning Art History</title>
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<header>
-		<figure id="logo">
-			<img src="logo.png"/> <!-- debo usar las imagenes a la mitad para que se vean bien eretina display -->
-		</figure>
-		<h1>
-			Ejemplo para el curso de mejorandola (Puls 2014)
-		</h1>
-		<figure id="avatar">
-			<img src="avatar.jpg"/>
-		</figure>
+		<h1>Learning Art History with context</h1>
 	</header>
-		
 	<nav>
 		<ul>
-			<li><a href="#">Ancho Completo</a></li>
-			<li><a href="#">Cuatro Columnas</a></li>
-			<li><a href="#">Doce Columnas</a></li>
-			<li id="contacto">Contácto</li>
+			<li><a href="#">1800</a></li>
+			<li><a href="#">1900</a></li>
 		</ul>	
 	</nav>
 	
-	<section id="content">
-		<article class="project">
-			<figure class="background"><img src="kim-background.jpg"/></figure>
-			<h2 class="titulo_project"><a href="#">Título del proyecto</a></h2>
-			<p class="author_project">Diseñado por <a href="#">Osvaldo Uribe</a>.</p>
-			<div class="detalle">
-				<a href="#" class="tag_project">Design</a>
-				<span class="date">hace <strong>5</strong> días</span>
-				<a href="#" class="comentarios_item">69 Comentarios</a>
-				<a href="#" class="guardar"></a>
-			</div>
-			<div class="vote">
-				<a href="#" class="up"></a>
-				720
-				<a href="#" class="down"></a>
-			</div>
+	<section class="century">
+		<article class="decade">
+			<h2>1800</h2>
+			<p>Let's see what's happening here</p>
 		</article>
 	</section>
 	<footer>
-		<p>Grillas <em>emblemáticas</em> desarrolladas en el curso de #mejorandoweb</p>
-		<p>Osvaldo Uribe 2014</p>
+		<p>By Osvaldo Uribe 2023 – Follow my art on instagram as @art.osv</p>
 	</footer>
 </body>
 </html>
