Adding bootstrap to the html
bootstrap v5.2

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<meta charset="UTF-8" />
 	<meta description="Learning Art History with Context" />
 	<title>Learning Art History</title>
-	<link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 </head>
 <body>
 	<header>
 		<h1>Learning Art History with context</h1>
+		<p>This is a project by Osvaldo Uribe, while trying to learn art.</p>
+		<p>For context; the idea is to visually contextualize history and art in different locations, specially in Europe and South America. And if I'm capable to make this scalable by myself, then i'll be adding more context.</p>
 	</header>
 	<nav>
 		<ul>
@@ -17,14 +20,12 @@
 		</ul>	
 	</nav>
 	
-	<section class="century">
-		<article class="decade">
-			<h2>1800</h2>
-			<p>Let's see what's happening here</p>
-		</article>
-	</section>
+	
 	<footer>
-		<p>By Osvaldo Uribe 2023 – Follow my art on instagram as @art.osv</p>
+		</hr>
+		<p>By Osvaldo Uribe 2023 – Follow my Art Projects on instagram as @art.osv</p>
 	</footer>
+	<!--Required to make bootstrap works, so don't delete it-->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js" integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS" crossorigin="anonymous"></script>
 </body>
 </html>
