--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
+<div class="container-fluid">
 	<header>
 		<h1>Learning Art History with context</h1>
 		<p>This is a project by Osvaldo Uribe, while trying to learn art.</p>
@@ -47,9 +48,11 @@
 	</div>
 	
 	<footer>
-		</hr>
+		<hr/>
 		<p>By Osvaldo Uribe 2023 – Follow my Art Projects on instagram as @art.osv</p>
 	</footer>
+	</div><!--this is just to close the wrapper-->	
+
 	<!--Required to make bootstrap works, so don't delete it-->
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
