Spacing and preparing for real content

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
 <div class="container-fluid">
-	<header>
+	<header class="ptb-3">
 		<h1>Learning Art History with context</h1>
 		<p>This is a project by Osvaldo Uribe, while trying to learn art.</p>
 		<p>For context; the idea is to visually contextualize history and art in different locations, specially in Europe and South America. And if I'm capable to make this scalable by myself, then i'll be adding more context.</p>
 	</header>
 	<nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-		<a class="navbar-brand" href="#">Time Line</a>
+		<a class="navbar-brand" href="#">Timeline</a>
 		<ul class="nav nav-pills">
-    		<li class="nav-item"><a class="nav-link" href="#scrollspyHeading1">1800</a></li>
-    		<li class="nav-item"><a class="nav-link" href="#scrollspyHeading2">1900</a></li>
     		<li class="nav-item dropdown">
-    			<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+    			<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Years</a>
       			<ul class="dropdown-menu">
+      				<li><a class="dropdown-item" href="#scrollspyHeading1">1700</a></li>
+        			<li><a class="dropdown-item" href="#scrollspyHeading2">1800</a></li>
         			<li><a class="dropdown-item" href="#scrollspyHeading3">1700</a></li>
         			<li><a class="dropdown-item" href="#scrollspyHeading4">1800</a></li>
-        			<li><hr class="dropdown-divider"></li>
+        			<!--<li><hr class="dropdown-divider"></li>-->
         			<li><a class="dropdown-item" href="#scrollspyHeading5">1900</a></li>
       			</ul>
     		</li>
@@ -47,7 +47,7 @@
   		
 	</div>
 	
-	<footer>
+	<footer class="ptb-3">
 		<hr/>
 		<p>By Osvaldo Uribe 2023 – Follow my Art Projects on instagram as @art.osv</p>
 	</footer>
