--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-<div class="container-fluid">
-	<header class="ptb-3">
+<div class="container-fluid p-3">
+	<header>
 		<h1>Learning Art History with context</h1>
 		<p>This is a project by Osvaldo Uribe, while trying to learn art.</p>
 		<p>For context; the idea is to visually contextualize history and art in different locations, specially in Europe and South America. And if I'm capable to make this scalable by myself, then i'll be adding more context.</p>
@@ -47,7 +47,7 @@
   		
 	</div>
 	
-	<footer class="ptb-3">
+	<footer>
 		<hr/>
 		<p>By Osvaldo Uribe 2023 – Follow my Art Projects on instagram as @art.osv</p>
 	</footer>
