--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-<div class="container-fluid p-3">
+<div class="container-fluid p-3"><!-- p-3 is a spacer class -->
 	<header>
 		<h1>Learning Art History with context</h1>
 		<p>This is a project by Osvaldo Uribe, while trying to learn art.</p>
@@ -19,7 +19,7 @@
 		<ul class="nav nav-pills">
     		<li class="nav-item dropdown">
     			<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Years</a>
-      			<ul class="dropdown-menu">
+      			<ul class="dropdown-menu dropdown-menu-lg-end">
       				<li><a class="dropdown-item" href="#scrollspyHeading1">1700</a></li>
         			<li><a class="dropdown-item" href="#scrollspyHeading2">1800</a></li>
         			<li><a class="dropdown-item" href="#scrollspyHeading3">1700</a></li>
@@ -33,23 +33,28 @@
 	
 	<div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
   	
-  		<h4 id="scrollspyHeading1">1500</h4>
-  		<p>This is some placeholder content for the scrollspy page. Note that as you scroll down the page, the appropriate navigation link is highlighted. It's repeated throughout the component example. We keep adding some more example copy here to emphasize the scrolling and highlighting.
-  		<p>Keep in mind that the JavaScript plugin tries to pick the right element among all that may be visible. Multiple visible scrollspy targets at the same time may cause some issues.</p>
-  		<h4 id="scrollspyHeading2">1600</h4>
+  		<h2 id="scrollspyHeading1">1500</h2>
+  		<h4>Leonardo da Vinci</h4>
+  		<p>Leonardo da Vinci created the majority of his work during the 15th and 16th centuries. His artistic career spanned several decades, with notable periods including his time in Florence, Milan, and later in France. Da Vinci's most significant works were produced between approximately 1470 and 1519. During this time, he created masterpieces such as the Mona Lisa, The Last Supper, and The Vitruvian Man, among many others. Da Vinci's artistic output encompassed not only painting but also sculpture, architecture, anatomy studies, engineering designs, and scientific investigations. His work continues to be revered for its innovation, beauty, and enduring influence on the art world.</p>
+  		<h2 id="scrollspyHeading2">1600</h2>
   		<p>...</p>
-  		<h4 id="scrollspyHeading3">1700</h4>
+  		<h2 id="scrollspyHeading3">1700</h2>
   		<p>...</p>
-  		<h4 id="scrollspyHeading4">1800</h4>
+  		<h2 id="scrollspyHeading4">1800</h2>
   		<p>...</p>
-  		<h4 id="scrollspyHeading5">1900</h4>
-  		<p>...</p>
-  		
-	</div>
+  		<h2 id="scrollspyHeading5">1900</h2>
+  		<h3>Art</h3>
+  		<h4>Pablo Picasso</h4>
+  		<p>He produced a significant portion of his work during the 20th century. His artistic career spanned several decades, and he was highly prolific, creating artworks across various styles and periods. Picasso's most renowned periods include the Blue Period (1901-1904), Rose Period (1904-1906), African art-inspired Period (1907-1909), Analytic Cubism (1909-1912), and Synthetic Cubism (1912-1919). However, he continued to produce art throughout his life, experimenting with different styles and mediums until his death in 1973.</p>
+  		<h4>Fernando Botero</h4>
+  		<p>a renowned Colombian artist known for his distinctive style characterized by voluminous figures, has created a vast body of work throughout his career. The majority of Botero's work was produced from the <strong>1960s</strong> onwards. During this period, he developed and perfected his signature style, often depicting subjects such as people, animals, and still life objects with exaggerated proportions. Botero's career has spanned several decades, and he continues to create art to this day, making him one of the most prominent and prolific artists of the 20th and 21st centuries.</p>
+
+	</div><!-- the end of the content -->
 	
 	<footer>
 		<hr/>
 		<p>By Osvaldo Uribe 2023 – Follow my Art Projects on instagram as @art.osv</p>
+		<p>Adding me a quick <a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">link to the documentation of Bootstrap</a></p>
 	</footer>
 	</div><!--this is just to close the wrapper-->	
 
