First Layer of art
No style, just movements with just a few artist.

--- a/index.html
+++ b/index.html
@@ -14,51 +14,213 @@
 		<p>This is a project by Osvaldo Uribe, while trying to learn art.</p>
 		<p>For context; the idea is to visually contextualize history and art in different locations, specially in Europe and South America. And if I'm capable to make this scalable by myself, then i'll be adding more context.</p>
 	</header>
-	<nav id="navbar-example2" class="navbar bg-body-tertiary px-3 mb-3">
-		<a class="navbar-brand" href="#">Timeline</a>
-		<ul class="nav nav-pills">
-    		<li class="nav-item dropdown">
-    			<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Years</a>
-      			<ul class="dropdown-menu dropdown-menu-lg-end">
-      				<li><a class="dropdown-item" href="#scrollspyHeading1">1700</a></li>
-        			<li><a class="dropdown-item" href="#scrollspyHeading2">1800</a></li>
-        			<li><a class="dropdown-item" href="#scrollspyHeading3">1700</a></li>
-        			<li><a class="dropdown-item" href="#scrollspyHeading4">1800</a></li>
-        			<!--<li><hr class="dropdown-divider"></li>-->
-        			<li><a class="dropdown-item" href="#scrollspyHeading5">1900</a></li>
-      			</ul>
-    		</li>
-  		</ul>
-	</nav>
 	
-	<div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
-  	
-  		<h2 id="scrollspyHeading1">1500</h2>
-  		<h4>Leonardo da Vinci</h4>
-  		<p>Leonardo da Vinci created the majority of his work during the 15th and 16th centuries. His artistic career spanned several decades, with notable periods including his time in Florence, Milan, and later in France. Da Vinci's most significant works were produced between approximately 1470 and 1519. During this time, he created masterpieces such as the Mona Lisa, The Last Supper, and The Vitruvian Man, among many others. Da Vinci's artistic output encompassed not only painting but also sculpture, architecture, anatomy studies, engineering designs, and scientific investigations. His work continues to be revered for its innovation, beauty, and enduring influence on the art world.</p>
-  		<h2 id="scrollspyHeading2">1600</h2>
-  		<p>...</p>
-  		<h2 id="scrollspyHeading3">1700</h2>
-  		<p>...</p>
-  		<h2 id="scrollspyHeading4">1800</h2>
-  		<p>...</p>
-  		<h2 id="scrollspyHeading5">1900</h2>
-  		<h3>Art</h3>
-  		<h4>Pablo Picasso</h4>
-  		<p>He produced a significant portion of his work during the 20th century. His artistic career spanned several decades, and he was highly prolific, creating artworks across various styles and periods. Picasso's most renowned periods include the Blue Period (1901-1904), Rose Period (1904-1906), African art-inspired Period (1907-1909), Analytic Cubism (1909-1912), and Synthetic Cubism (1912-1919). However, he continued to produce art throughout his life, experimenting with different styles and mediums until his death in 1973.</p>
-  		<h4>Fernando Botero</h4>
-  		<p>a renowned Colombian artist known for his distinctive style characterized by voluminous figures, has created a vast body of work throughout his career. The majority of Botero's work was produced from the <strong>1960s</strong> onwards. During this period, he developed and perfected his signature style, often depicting subjects such as people, animals, and still life objects with exaggerated proportions. Botero's career has spanned several decades, and he continues to create art to this day, making him one of the most prominent and prolific artists of the 20th and 21st centuries.</p>
-
-	</div><!-- the end of the content -->
+	<section class="period" id="prehistoric">
+	<h2>Pre-Historic; 3000 BC</h2>
+		<p>Art was a way of communication between tribes to learn how to survive.</p>
+		<h3>Venus of Willendorf</h3>
+		<caption>c. 24,000–22,000 BC <br/>Discovered in Willendorf, Austria</caption>
+	</section>
+	<section class="period" id="ancient">
+	<h2>Ancient; 3,000 BC to 400</h2>
+		<p>Society started to take shape in a few places of the world; Mesopotamia, Persia, Egypt, Greece, Rome, China.</p>
+		<h3>The Nefertiti Bust</h3>
+		<h3>The Terracota Army</h3>
+		<h3>Venus de Milo</h3>
+		<h3>August of Prima Porta</h3>
+		<h3>The Code of Hummarabi</h3>
+		<caption>c. 1795–1750 BC<br/>Sippar. Mesopotamia (Currently Iraq)</caption>
+	</section>
+	<section class="period" id="medieval">
+	<h2>Medieval; 500 to 1400</h2>
+	<p>This is at the end of the Roman Empire and the Beginning od Renascence; 1400 to 1600 in Europe.</p>
+	<p>Mediaval art was mainly based on religious thoughts, as a way to attract more people to the church.</p>
+		<h3>Head of Christ</h3>
+		<caption>c. 1350 – 1399</caption>
+	</section>
+	<section class="period" id="renaissance">
+	<h2>Renaissance; 1400 to 1600</h2>
+		<p>Artist started to appreciate cultural movements</p>
+		<h3>The Last Supper</h3>
+		<caption>Leonardo Da'Vinci c.</caption>
+		<h3>Printing Press; 1436 to 1450</h3>
+		<h3>The Creation of Adam</h3>
+		<caption>Miguelangelo c.</caption>
+		<h3>Primavera</h3>
+		<caption>Sandro Boticelli c.</caption>
+	</section>
+	<section class="period" id="barroque">
+	<h3>Barroque; 1600 to 1730</h3>
+		<p>Art was about; extravagance and emotion, theatrical.</p>
+		<h3>Las Meninas</h3>
+		<caption>Diego Velasquez c.</caption>
+	</section>
+	<section class="period" id="rococo">
+	<h3>Rococo; 1700 to 1770</h3>
+		<p>Art was about; Light pastels colors, and whimsical narratives.</p>
+		<h3>The Swing</h3>
+		<caption>Jean c.</caption>
+		<h3>Madame Pompadour</h3>
+	</section>
+	<section class="period" id="neoclassicism">
+	<h3>Neoclassicism; 1770 to 1840</h3>
+		<p>Art was about; renew interest in simplicity, but also a new looking at back at figures.</p>
+		<h3></h3>
+		<caption></caption>
+	</section>
+	<section class="period" id="romanticism">
+	<h3>Romanticism; 1800 to 1850</h3>
+		<p>Art was about; Individuality, but in imagination in the spiritual side of humanity, personal freedom and expresion.</p>
+		<h3>French Revolution; 1848</h3>
+	</section>
+	<section class="period" id="realism">
+	<h3>Realism; 1850 to 1880</h3>
+		<p>Art was about; art rejected all that happened before, and they focus in everyday life, it showcase for the first time real people and from all social class, and painting almost look like photographs.</p>
+		<h3></h3>
+		<caption></caption>
+	</section>
+	<section class="period" id="impressionism">
+	<h3>Impressionism; 1860 to 1880</h3>
+		<p>Art was about; plein air; painting outdoors; it requiered that they create their own salon to expose art. Capture the present of modern life.</p>
+		<h3>Claude Monet</h3>
+			<h4>Woman with Parasol</h4>
+		<h3>Berthe Morisot</h3>
+		<h3>August Renoir</h3>
+		<h3>Edgar Degas</h3>
+		<caption></caption>
+	</section>
+	<section class="period" id="post-impressionism">
+	<h3>Post-Impressionism; 1880 to 1905</h3>
+		<p>Art was about; Bold colors, It mix science and imagination to convey more powerful scenes.</p>
+		<h3>Paul Cezanne</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Vincent VangGogh</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Paul G</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>George Seurat</h3>
+			<h4></h4>
+			<caption></caption>	
+	</section>
+	<section class="period" id="expressionism">
+	<h3>Expressionism; 1905 to 1920</h3>
+		<p>Art was about; Expressing the world in a subjective point of view and they offer the world a new meaning of beauty. They question what is consider a human, the good and the bad of it.</p>
+		<h3>Kandiski</h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="art-nouveau">
+	<h3>Art Nouveau; 1890 to 1910</h3>
+		<p>In Austria was call the Vienna Sussesion, In Spain it was called Modernisme, and in France; it was called Art Nouveau.</p>
+		<h3></h3>
+			<h4></h4>
+			<caption></caption>
+		<h3></h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="cubism">
+	<h3>Cubism; 1907 to 1914</h3>
+		<p>It was about; about showing different point of views from the same subjet in the same painting.</p>
+		<h3>Pablo Picasso</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Georges Braque</h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="futurism">
+	<h3>Futurism; 1909 to 1914</h3>
+		<p>Italy; We will free Italy from her innumetable museums which cover her like countless cementeries. This art movement is based on the power of machines.</p>
+		<h3>World War I; 1914 to 1918</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3></h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="dadaism">
+	<h3>Dadaism; 1916 to 1924</h3>
+		<p>Was an ati-war movement; so they refused everything that high-society pushed for. They wanted to create something new, to replace old art.</p>
+		<h3>Marcel Duchamp</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Johannes Theodor Baargeld</h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="surrealism">
+	<h3>Surrealism; 1920 to 1960</h3>
+		<p>It was about about making your mind work, influenced by Sigmund Freud.</p>
+		<h3>Salvador Dali</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Diego Rivera</h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="bauhaus">
+	<h3>Bauhaus; 1920 to 1930</h3>
+		<p>German school of art; Bau(Building)Haus(House) </p>
+		<h3>Wassily Kandinsky</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Paul Klee</h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="abstract-expressionism">
+	<h3>Abstract Expressionism; 1940 to 1950</h3>
+		<p>First American Movement to be known internationally</p>
+		<h3>Action painters; Jackson Pollock</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Color fields painters</h3>
+			<h4>Mark Rothko</h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="pop-art">
+	<h3>Pop Art; 1950 to 1960</h3>
+		<p>The sorrounded as an inspiration</p>
+		<h3>Andy Warhol</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3></h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="minimalism">
+	<h3>Minimalism; 1960 to 1970</h3>
+		<p>Extreme form of Abstract art; what you see, is what you see.</p>
+		<h3>Robert Moris</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Frank Stella</h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
+	<section class="period" id="contemporary-art">
+	<h3>Contemporary Art; 1960 to Present</h3>
+		<p>The art of today, but it feels like the general public rejected it. Mainly because is often about ideas and not aesthetics. But it reflects issues of society; identity, community, nationality.</p>
+		<h3>Jean-Michel Basquat</h3>
+			<h4></h4>
+			<caption></caption>
+		<h3>Yayoi Kusama</h3>
+			<h4></h4>
+			<caption></caption>
+	</section>
 	
 	<footer>
 		<hr/>
 		<p>By Osvaldo Uribe 2023 – Follow my Art Projects on instagram as @art.osv</p>
 		<p>Adding me a quick <a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">link to the documentation of Bootstrap</a></p>
 	</footer>
-	</div><!--this is just to close the wrapper-->	
 
-	<!--Required to make bootstrap works, so don't delete it-->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+</div><!--this is just to close the wrapper-->	
+<!--Required to make bootstrap works, so don't delete it-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
