--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 	<script>window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-93XKTSXZXL');</script>
 </head>
 <body>
-<div class="container-fluid p-5"><!-- p-5 is a spacer class -->
+<div class="container-fluid p-4"><!-- p-5 is a spacer class -->
 	<header>
 		<h1>Learning Art History with context</h1>
 		<p>This is a project by Osvaldo Uribe, while trying to learn art.</p>
 		<p>For context; the idea is to visually contextualize history and art in different locations, specially in Europe and South America. And if I'm capable to make this scalable by myself, then i'll be adding more context.</p>
+		<hr/>
 	</header>
 	
 	<section class="period" id="prehistoric">
@@ -36,13 +37,28 @@
 		<caption>c. 1795–1750 BC<br/>Sippar. Mesopotamia (Currently Iraq)</caption>
 		<hr/>
 	</section>
-	<section class="period" id="medieval">
-		<h2>Medieval; 500 to 1400</h2>
-		<p>This is at the end of the Roman Empire and the Beginning od Renascence; 1400 to 1600 in Europe.</p>
-		<p>Mediaval art was mainly based on religious thoughts, as a way to attract more people to the church.</p>
-		<h3>Head of Christ</h3>
-		<caption>c. 1350 – 1399</caption>
-		<hr/>
+	<section class="period overflow-x-scroll p-2 row" id="medieval">
+		<div class="p-2 col">
+			<h2>Medieval; 500 to 1400</h2>
+			<p>This is at the end of the Roman Empire and the Beginning od Renascence; 1400 to 1600 in Europe.</p>
+			<p>Mediaval art was mainly based on religious thoughts, as a way to attract more people to the church.</p>
+			<figure class="figure">
+				<img src="https://images.metmuseum.org/CRDImages/ep/original/DP-19581-001.jpg" class="img-fluid" alt="Sourced from MET Museum">
+				<figcaption class="figure-caption">Head of Christ – Artist: Master of the Orcagnesque Misericordia (Italian, Florence, active second half 14th century) <a href="https://www.metmuseum.org/art/collection/search/437021" target="_blank">View all details</a>.</figcaption>
+			</figure>
+		</div>
+		<div class="p-2 col">
+			<h2>South American Pre-Colony; until 1400</h2>
+			<p>In general, the pre-colonial period in South America includes the civilizations and cultures that thrived before the arrival of Christopher Columbus in 1492. This encompasses the advanced civilizations of the Inca in the Andean region, the Aztecs in Mesoamerica, and the various indigenous cultures of the Amazon rainforest, among others.</p>
+			<h3>Inca Empire</h3>
+			<caption>In the Andean region of South America, the Inca Empire flourished during the 1400s, expanding its territories and establishing a sophisticated administrative system. The Inca civilization reached its height under rulers like Pachacuti and became known for its architectural marvels, such as Machu Picchu.</caption>
+		</div>
+		<div class="p-2 col">
+			<h2>China; Ming Dynasty</h2>
+			<p>The Ming Dynasty in China (1368-1644) saw remarkable achievements in arts, culture, and trade. The Ming emperors sponsored impressive architectural projects, such as the construction of the Forbidden City, and China's maritime expeditions led by Admiral Zheng He expanded Chinese influence.</p>
+			<h3></h3>
+			<caption></caption>
+		</div>
 	</section>
 	<section class="period" id="renaissance">
 	<h2>Renaissance; 1400 to 1600</h2>
