Testing a styled version of horizontal scrolling
It seems to work correctly in desktop

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 		<caption>c. 1795–1750 BC<br/>Sippar. Mesopotamia (Currently Iraq)</caption>
 		<hr/>
 	</section>
-	<section class="period overflow-x-scroll p-2 row" id="medieval">
-		<div class="p-2 col">
+	<section class="period list-group list-group-horizontal position-relative overflow-auto" id="medieval">
+		<div class="p-2 list-group-item" style="min-width:300px;">
 			<h2>Medieval; 500 to 1400</h2>
 			<p>This is at the end of the Roman Empire and the Beginning od Renascence; 1400 to 1600 in Europe.</p>
 			<p>Mediaval art was mainly based on religious thoughts, as a way to attract more people to the church.</p>
@@ -47,13 +47,31 @@
 				<figcaption class="figure-caption">Head of Christ – Artist: Master of the Orcagnesque Misericordia (Italian, Florence, active second half 14th century) <a href="https://www.metmuseum.org/art/collection/search/437021" target="_blank">View all details</a>.</figcaption>
 			</figure>
 		</div>
-		<div class="p-2 col">
+		<div class="p-2 list-group-item" style="min-width:300px;">
 			<h2>South American Pre-Colony; until 1400</h2>
 			<p>In general, the pre-colonial period in South America includes the civilizations and cultures that thrived before the arrival of Christopher Columbus in 1492. This encompasses the advanced civilizations of the Inca in the Andean region, the Aztecs in Mesoamerica, and the various indigenous cultures of the Amazon rainforest, among others.</p>
 			<h3>Inca Empire</h3>
 			<caption>In the Andean region of South America, the Inca Empire flourished during the 1400s, expanding its territories and establishing a sophisticated administrative system. The Inca civilization reached its height under rulers like Pachacuti and became known for its architectural marvels, such as Machu Picchu.</caption>
 		</div>
-		<div class="p-2 col">
+		<div class="p-2 list-group-item" style="min-width:300px;">
+			<h2>China; Ming Dynasty</h2>
+			<p>The Ming Dynasty in China (1368-1644) saw remarkable achievements in arts, culture, and trade. The Ming emperors sponsored impressive architectural projects, such as the construction of the Forbidden City, and China's maritime expeditions led by Admiral Zheng He expanded Chinese influence.</p>
+			<h3></h3>
+			<caption></caption>
+		</div>
+		<div class="p-2 list-group-item" style="min-width:300px;">
+			<h2>China; Ming Dynasty</h2>
+			<p>The Ming Dynasty in China (1368-1644) saw remarkable achievements in arts, culture, and trade. The Ming emperors sponsored impressive architectural projects, such as the construction of the Forbidden City, and China's maritime expeditions led by Admiral Zheng He expanded Chinese influence.</p>
+			<h3></h3>
+			<caption></caption>
+		</div>
+		<div class="p-2 list-group-item" style="min-width:300px;">
+			<h2>China; Ming Dynasty</h2>
+			<p>The Ming Dynasty in China (1368-1644) saw remarkable achievements in arts, culture, and trade. The Ming emperors sponsored impressive architectural projects, such as the construction of the Forbidden City, and China's maritime expeditions led by Admiral Zheng He expanded Chinese influence.</p>
+			<h3></h3>
+			<caption></caption>
+		</div>
+		<div class="p-2 list-group-item" style="min-width:300px;">
 			<h2>China; Ming Dynasty</h2>
 			<p>The Ming Dynasty in China (1368-1644) saw remarkable achievements in arts, culture, and trade. The Ming emperors sponsored impressive architectural projects, such as the construction of the Forbidden City, and China's maritime expeditions led by Admiral Zheng He expanded Chinese influence.</p>
 			<h3></h3>
