--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<div class="p-3 list-group-item" style="min-width:300px;">
 			<figure class="figure">
 				<img src="https://images.metmuseum.org/CRDImages/as/original/DP-15980-001.jpg" class="img-fluid" alt="Sourced from MET Museum">
-				<figcaption class="figure-caption"Portrait of the Artist's Great-Granduncle Yizhai at the Age of Eighty-Five <a href="https://www.metmuseum.org/art/collection/search/36081" target="_blank">View all details</a>.</figcaption>
+				<figcaption class="figure-caption">Portrait of the Artist's Great-Granduncle Yizhai at the Age of Eighty-Five <a href="https://www.metmuseum.org/art/collection/search/36081" target="_blank">View all details</a>.</figcaption>
 			</figure>
 			<h2>China; Ming Dynasty</h2>
 			<p>The Ming Dynasty in China (1368-1644) saw remarkable achievements in arts, culture, and trade. The Ming emperors sponsored impressive architectural projects, such as the construction of the Forbidden City, and China's maritime expeditions led by Admiral Zheng He expanded Chinese influence.</p>
