Adding dictatorships in south america
Adding some meat

--- a/index.html
+++ b/index.html
@@ -273,8 +273,16 @@
 	</div>
 	<div class="p-3 list-group-item">
 			<h2>Fernando Botero</h2>
-			<p>Fernando Botero Angulo is a Colombian figurative artist and sculptor, born in Medellín. His signature style, also known as "Boterismo", depicts people and figures in large, exaggerated volume, which can represent political criticism or humor, depending on the piece. He is considered the most recognized and quoted living artist from Latin America, and his art can be found in highly visible places around the world, such as Park Avenue in New York City and the Champs-Élysées in Paris.</p>
+			<p>Fernando Botero Angulo is a Colombian figurative artist and sculptor, born in Medellín. His signature style, also known as <em>Boterismo</em>, depicts people and figures in large, exaggerated volume, which can represent political criticism or humor, depending on the piece. He is considered the most recognized and quoted living artist from Latin America, and his art can be found in highly visible places around the world, such as Park Avenue in New York City and the Champs-Élysées in Paris.</p>
 			<p><a href="https://www.instagram.com/reel/Cn5TM6SDFTP/">Instagram Review of Fernando Botero</a></p>
+	</div>
+	<div class="p-3 list-group-item">
+			<h2>South American Context</h2>
+			<ul>
+				<li><strong>Military Coups and Dictatorships</strong>: Several South American countries experienced military coups and subsequent dictatorships during the 1960s and 1970s. Countries like Brazil, Chile, Argentina, Uruguay, and others were affected by these authoritarian regimes, leading to human rights abuses, political repression, and social unrest. <figcaption>This is when part of my family was forced to emigrate in Canada, and the reason I didn't have the right to learn art.</figcaption></li>
+				<li><strong>Social Movements and Protests</strong>: South America has been marked by numerous social movements and protests in recent decades. These movements have been driven by various causes, including demands for social justice, indigenous rights, environmental conservation, gender equality, and labor rights.</li>
+				<li><strong>Falklands War (1982)</strong>: Argentina and the United Kingdom engaged in a brief but intense conflict over the sovereignty of the Falkland Islands (known as the Malvinas in Argentina). The war resulted in British victory and had a significant impact on regional geopolitics.</li>
+			</ul>
 	</div>
 	</section>
 	
