--- a/index.html
+++ b/index.html
@@ -208,16 +208,37 @@
 			<caption></caption>
 		<hr/>
 	</section>
-	<section class="period" id="surrealism">
-	<h3>Surrealism; 1920 to 1960</h3>
-		<p>It was about about making your mind work, influenced by Sigmund Freud.</p>
-		<h3>Salvador Dali</h3>
-			<h4></h4>
-			<caption></caption>
-		<h3>Diego Rivera</h3>
-			<h4></h4>
-			<caption></caption>
-		<hr/>
+	<section class="period list-group list-group-horizontal position-relative overflow-auto" id="surrealism">
+		<div class="p-3 list-group-item">
+			<h2>Surrealism; 1920 to 1960</h2>
+			<p>It was about about making your mind work, influenced by Sigmund Freud.</p>
+		</div>
+		<div class="p-3 list-group-item">
+			<h2>Frida Kahlo</h2>
+			<p>Frida Kahlo was a Mexican artist who is widely celebrated for her unique and deeply personal artworks. She was born on July 6, 1907, in Coyoacán, Mexico City, and died on July 13, 1954. Kahlo's life and art were deeply intertwined, and her paintings often served as a reflection of her physical and emotional pain, as well as her identity and cultural heritage.</p>
+			<figure class="figure">
+				<img src="https://www.fridakahlo.org/images/paintings/the-two-fridas.jpg" class="img-fluid" alt="Sourced from fridakahlo.org">
+				<figcaption class="figure-caption">One of the most iconic and recognizable paintings by Frida Kahlo is "The Two Fridas" (Las Dos Fridas in Spanish). Painted in 1939, this masterpiece is considered one of Kahlo's most significant works and has become an enduring symbol of her art and personal struggles.</figcaption>
+				<figcaption class="figure-caption">"The Two Fridas" features two self-portraits of Frida Kahlo sitting side by side, connected by clasped hands and sharing a single heart. The painting depicts two different representations of Kahlo—one in traditional Tehuana costume, and the other in a white European dress, symbolizing her dual heritage and identity.</figcaption>
+			</figure>
+		</div>
+		<div class="p-3 list-group-item">
+			<h2>Diego Rivera</h2>
+			<p>Diego Rivera was a prominent Mexican painter and muralist, born on December 8, 1886, in Guanajuato, Mexico, and died on November 24, 1957, in Mexico City. He is regarded as one of the most influential artists of the 20th century and a key figure in the Mexican muralist movement.</p>
+			<p>Influence of Mexican Culture: Rivera incorporated elements of pre-Columbian and indigenous Mexican art into his works, celebrating Mexico's rich cultural heritage and traditions.</p>
+			<p>Influence on the Art World: Rivera's art had a profound impact not only in Mexico but also internationally. His murals inspired artists around the world, and he played a significant role in promoting the muralist movement.</p>
+			<figure class="figure">
+				<img src="https://www.moma.org/media/W1siZiIsIjEzMzM5MCJdLFsicCIsImNvbnZlcnQiLCItcXVhbGl0eSA5MCAtcmVzaXplIDIwMDB4MTUwMFx1MDAzZSJdXQ.jpg" class="img-fluid" alt="Sourced from MoMA">
+			</figure>
+		</div>
+		<div class="p-3 list-group-item">
+			<h2>Salvador Dalí</h2>
+			<p>Salvador Dalí was a Spanish surrealist artist born on May 11, 1904, in Figueres, Spain, and passed away on January 23, 1989. He is renowned for his extraordinary and eccentric works, which pushed the boundaries of imagination and challenged conventional artistic norms. Dalí's art often featured dreamlike, bizarre, and symbolic imagery, blurring the lines between reality and the subconscious. He was deeply influenced by Freudian psychology, and his works often explored themes of desire, sexuality, and the unconscious mind.</p>
+			<figure class="figure">
+				<img src="https://www.moma.org/media/W1siZiIsIjM4NjQ3MCJdLFsicCIsImNvbnZlcnQiLCItcXVhbGl0eSA5MCAtcmVzaXplIDIwMDB4MTUwMFx1MDAzZSJdXQ.jpg" class="img-fluid" alt="Sourced from MoMA">
+				<figcaption class="figure-caption">Dalí's iconic paintings, such as "The Persistence of Memory" with its melting clocks, have become emblematic of the surrealist movement. His distinct style combined meticulous technique with a flair for the fantastical, creating a surreal world that captivated audiences. Beyond painting, Dalí experimented with sculpture, photography, and filmmaking, further establishing himself as a multi-talented and enigmatic figure in the art world. His legacy endures through his imaginative and groundbreaking contributions to surrealism, making him one of the most celebrated and recognizable artists of the 20th century.</figcaption>
+			</figure>
+		</div>
 	</section>
 	<section class="period" id="bauhaus">
 	<h3>Bauhaus; 1920 to 1930</h3>
