Adding a better intro to the repository
Describing the Readme

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="container-fluid p-4"><!-- p-5 is a spacer class -->
 	<header>
 		<h1>Learning Art History with context</h1>
-		<p>This is a project by Osvaldo Uribe, while trying to learn art.</p>
+		<p>This is a project by Osvaldo Uribe Escobar, while trying to learn art.</p>
 		<p>For context; the idea is to visually contextualize history and art in different locations, specially in Europe and South America. And if I'm capable to make this scalable by myself, then i'll be adding more context.</p>
 		<hr/>
 	</header>
